<resources>
    <string name="app_name">Hassalarm</string>
    <string name="no_scheduled_alarm">No next alarm scheduled.</string>
    <string name="hass_io_host_name_ip">Home Assistant host name/IP</string>
    <string name="next_alarm">Next scheduled alarm %s</string>
    <string name="toast_saved">Connection details saved.</string>
    <string name="hass_io_entity_id">Entity ID</string>
    <string name="key_type">Access type</string>
    <string name="key_is_token">Long-lived access token</string>
    <string name="key_is_webhook">Webhook ID</string>
    <string name="key_is_legacy">API password (deprecated)</string>
    <string name="button_close">Close</string>
    <string name="status_running">Running connection test…</string>
    <string name="status_done_ok">Connection successful.</string>
    <string name="status_done_failed">Connection failed, see log.</string>
    <string name="using_url">Request: %s %s\n</string>
    <string name="headers">Request headers: %s</string>
    <string name="body">Request body: %s\n\n</string>
    <string name="help_text_first">This app listen for changes to the next scheduled alarm, reported by the OS. Decent alarm clock apps will report their next scheduled alarm to the OS. This app will sync the next alarm within an hour from when the next scheduled alarm changes.</string>
    <string name="help_text_second">Start by editing your connection details for Home Assistant under \"Edit Connection\". Enter hostname, select your access type (long lived API token or webhook) and specify the full entity ID name for your input_datetime input e.g. \"input_datetime.next_alarm\". Read more on how to configure a input_datetime that has both date and time in Home Assistant here: https://github.com/Johboh/hassalarm. If no alarm is scheduled, the default input_datetime value of 1970–01–01 00:00:00 will be published.</string>
    <string name="help_text_third">For legacy reasons, you can also publish the next alarm as normal sensor using the format yyyy-MM-dd HH:mm:00 (for example using entity ID sensor.next_alarm) and also using a API key instead of the recommended long lived token. This app will eventually drop support for this and input_datetime and long lived token will be the only supported way (or any new ways).</string>
    <string name="help_text_fourth">Home Assistant configuration help, questions or issues, visit https://github.com/Johboh/hassalarm</string>
    <string name="connection_ok">Success, response: %s\n</string>
    <string name="connection_failure">Failure: %s\n</string>
    <string name="connection_failure_code">Failure, code: %s\n</string>
    <string name="help_text_about">About</string>
    <string name="published_successfully">Published Successfully</string>
    <string name="failed_to_publish">Publish failed, check connection details</string>
    <string name="failed_no_connection">Missing Connection data\nPlease Edit the Connection details</string>
    <string name="edit_connection">Edit Connection</string>
    <string name="edit_connection_label">Edit Connection</string>
    <string name="last_publish_at">Last publish at %s</string>
    <string name="last_failed_publish_at">Last failed publish at %s</string>
    <string name="last_successful_publish_at">Last successful publish at %s</string>
    <string name="test_connection">Test Connection</string>
    <string name="action_ban">Ignore apps</string>
    <string name="action_about">About</string>
    <string name="is_input_legacy">Entity ID is legacy sensor instead of input_datetime (see About)</string>
    <string name="unsaved_changes_title">Discard changes?</string>
    <string name="unsaved_changes_message">You have unsaved changes. Do you want to discard them?</string>
    <string name="unsaved_changes_discard">Discard</string>
    <string name="unsaved_changes_cancel">Cancel</string>
    <string name="copy_full_log">Copy full log</string>
    <string name="copy_anonymous_log">Copy anonymous log</string>
    <string name="log_using_token">Using long lived token</string>
    <string name="log_using_webhook">Using webhook ID</string>
    <string name="log_using_api_key">Using legacy API key</string>
    <string name="log_entity_id_is_legacy_sensor">Entity ID is of type legacy sensor</string>
    <string name="log_entity_id_is_input_datetime">Entity ID is of type input_datetime</string>
    <string name="ban_intro">Some applications/phones wrongfully report calendar events or reminders as a next scheduled alarm. The Alarm Manager in Android OS is intended to be used by alarm clocks. This app uses the AlarmManager.getNextAlarmClock() to determine the next scheduled time, but if this is wrongfully set by calendar apps, you can ignore alarms set by those apps. But as there can be only one next alarm set, this app will report no alarm set until the next alarm is an alarm from an app that isn not banned.</string>
    <string name="ban_howto">To ignore an app, open this view when the next alarm is wrong and add the app to the list of apps to ignore.</string>
    <string name="ban_ignored">Ignored Apps</string>
    <string name="ban_button_add_to_ignore_list">Add to ignore list</string>
    <string name="ban_button_add_manual_to_ignore_list">Add manual package to ignore list</string>
    <string name="ban_manual_package_name_hint">Manual package name</string>
    <string name="ban_no_alarm_set"><![CDATA[<none>]]></string>
    <string name="ban_row_remove">Remove</string>
    <string name="main_next_is_ignored_app">Next alarm is from an ignored app.</string>
    <string name="action_history">Publish history</string>
    <string name="history_info">History over all published attempts. Tap rows to show full error string, if available.</string>
    <string name="history_row_publish_time">\@ %s</string>
    <string name="history_row_publish_trigger_time">alarm \@: %s</string>
    <string name="history_error_dialog_title">Error message</string>
    <string name="history_error_dialog_button_ok">OK</string>
    <string name="history_clear">Clear history</string>
    <string name="history_cleared">History cleared</string>
    <string name="resticted_battery_body">Android may block network access during the night (Doze mode). In App settings, set Battery usage to \"Unrestricted\" to allow reliable updates.</string>
    <string name="resticted_battery_title">Battery optimization active</string>
    <string name="resticted_battery_button">Open settings</string>
</resources>
