<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/help_text_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/help_text_about"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/help_text_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/help_text_first"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/help_text_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autoLink="web"
            android:text="@string/help_text_second"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/help_text_third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autoLink="web"
            android:text="@string/help_text_third"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/help_text_fourth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autoLink="web"
            android:text="@string/help_text_fourth"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>