<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditConnectionActivity"
    tools:showIn="@layout/activity_edit_connection">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/host"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/host_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hass_io_host_name_ip"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/api_key"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/host"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/api_key_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hass_io_api_key"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/key_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/api_key"
        android:layout_marginBottom="10dp"
        android:checkedButton="@id/key_is_token">

        <TextView
            android:id="@+id/key_type_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:text="@string/key_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/key_type"
            android:layout_marginBottom="6dp"
            />

        <RadioButton
            android:id="@+id/key_is_token"
            style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
            android:text="@string/key_is_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/key_type_text"
            />

        <RadioButton
            android:id="@+id/key_is_webhook"
            style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
            android:text="@string/key_is_webhook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/key_is_token"
            />

        <RadioButton
            android:id="@+id/key_is_legacy"
            style="@style/Widget.MaterialComponents.CompoundButton.RadioButton"
            android:text="@string/key_is_legacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/key_is_webhook"
            />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/entity_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/key_type"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entity_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hass_io_entity_id"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/is_entity_legacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/entity_id"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:text="@string/is_input_legacy" />

    <Button
        android:id="@+id/test_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/is_entity_legacy"
        android:layout_marginBottom="10dp"
        android:text="@string/test_connection" />

    <LinearLayout
        android:id="@+id/status_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/test_button"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/status_drawable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            tools:text="Running connection test..." />

    </LinearLayout>

    <TextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/save"
        android:layout_below="@id/status_container"
        android:scrollbars="vertical"
        android:singleLine="false" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:text="Save and close" />

</RelativeLayout>